<resources>
    <string name="app_name">Pictogram</string>

    <string name="drawer_open" translatable="false">Navigation Drawer open</string>
    <string name="drawer_close" translatable="false">Navigation Drawer Close</string>

    <string name="lightTheme">ライトテーマ</string>
    <string name="darkTheme">ダークテーマ</string>
    <string name="systemTheme">システムのデフォルト</string>
    <string name="unknown">不明</string>
    <string name="startGame">ゲームスタート</string>
    <string name="explainGame">ゲーム説明</string>
    <string name="gameSummary">ピクトグラムになりきってハイスコアを目指そう！！</string>
    <string name="permissionReject">許可されませんでした</string>
    <string name="requirePermission">アプリを使用するにはカメラの権限が必要です</string>
    <string name="tableTennis">卓球</string>
    <string name="weightlifting">重量挙げ</string>
    <string name="imitateThe">を真似しろ！</string>
    <string name="unknownError">不明なエラーが発生しました</string>
    <string name="degreeMatch">一致度</string>
    <string name="archery">アーチェリー</string>
    <string name="volleyball">バレーボール</string>
    <string name="tennis">テニス</string>
    <string name="athletics">陸上競技</string>
    <string name="badminton">バドミントン</string>
    <string name="basketball">バスケットボール</string>
    <string name="beachVolleyball">ビーチバレー</string>
    <string name="boxing">ボクシング</string>
    <string name="cycling">サイクリング</string>
    <string name="diving">ダイビング</string>
    <string name="fencing">フェンシング</string>
    <string name="football">サッカー</string>
    <string name="golf">ゴルフ</string>
    <string name="handball">ハンドボール</string>
    <string name="hockey">ホッケー</string>
    <string name="rhythmicGymnastics">新体操</string>
    <string name="rugby">ラグビー</string>
    <string name="shooting">射撃</string>
    <string name="taekwondo">テコンドー</string>
    <string name="wrestling">レスリング</string>
    <string name="adjustment">調整中</string>
    <string name="adjustmentSum">全身がカメラに映るようにしてください</string>
    <string name="testExplain">スマートフォンを起き、カメラに全身が写るようにしてください。\n\nアプリが全身を検知すると、自動的にゲームがスタートします</string>
    <string name="untilGameStart">ゲーム開始まで</string>
    <string name="elapsedTime">経過時間</string>
    <string name="general">一般</string>
    <string name="processingMethod">処理方法</string>
    <string name="processingMethodSum">姿勢推定に使用する処理方法を選択します。一般に、CPUよりもGPUのほうが高速に処理することができます。Android P 以上のデバイスであればNNAPIを使用することでさらなる高速化が期待できます。</string>
    <string name="overview">概要</string>
    <string name="version">バージョン</string>
    <string name="openSourceLicense">オープンソースライセンス</string>
    <string name="debugSetting">デバッグ用設定</string>
    <string name="debug">デバッグ</string>
    <string name="hideFace">顔隠し</string>
    <string name="setting">設定</string>
    <string name="error">エラー</string>
    <string name="criticalErrorSum">ゲームを進行できない深刻なエラーが発生しました。</string>
    <string name="debugInformation">デバッグ情報</string>
    <string name="adviceProcessingMethod">処理方法をCPUに変更するとエラーが解消される場合があります。</string>
    <string name="gameClear">GAME CLEAR!!</string>
    <string name="clearTime">クリアタイム</string>
    <string name="ranking">ランキング</string>
    <string name="backToTitle">タイトルへ戻る</string>
    <string name="second">秒</string>
    <string name="rank">位</string>
    <string name="failedToRegisterRanking">ランキングの登録に失敗しました</string>
    <string name="previewCamera">プレビューを描写</string>
    <string name="previewCameraSum">カメラから受け取った画像のプレビューを描写します</string>
    <string name="debugMode">デバッグモード</string>
    <string name="estimatedAccuracy">推定精度</string>
    <string name="estimatedAccuracySum">姿勢推定の精度を選択します。設定が高いほど推定精度は向上しますが、FPSが下がります。また「高精度」ではNNAPIとGPUが使用できません。「中精度」ではGPUが使用できません。</string>
    <string name="highAccuracy">高精度</string>
    <string name="middleAccuracy">中精度</string>
    <string name="lowAccuracy">低精度</string>
    <string name="changeMethodByHighAccuracyModel">高精度を選択したため、処理方法が「CPU」に変更されました</string>
    <string name="changeMethodByMiddleAccuracyModel">中精度を選択したため、処理方法が「CPU」に変更されました</string>
    <string name="changeModelByNNAPI">NNAPIを選択したため、推定精度が「中精度」に変更されました</string>
    <string name="changeModelByGPU">GPUを選択したため、推定精度が「低精度」に変更されました</string>
    <string name="caution">注意</string>
    <string name="cancelGameMessage">ゲームが進行中です。中止しますか？</string>
    <string name="cancel">キャンセル</string>
    <string name="continueGame">続行</string>
    <string name="stopGame">中止</string>
    <string name="totalTime">合計時間</string>
    <string name="notRegisteredRanking">ランキングが登録されていません</string>
    <string name="editName">名前を編集</string>
    <string name="editNameSum">ランキング画面に表示させる名前を入力してください。個人情報や他人を不快にさせる内容等は入力しないでください。</string>
    <string name="name">名前</string>
    <string name="ruleSummary">このゲームは、次々に表示されるオリンピック競技のピクトグラムになりきるゲームです。お題は5問出題され、出題される競技、順番は完全にランダムです。できるだけ早く、正確になりきってハイスコアを目指そう！</string>
    <string name="rule1Prepare">1. 準備</string>
    <string name="rule1PrepareSum">① ゲーム開始ボタンを押したら、スマートフォンを安定した場所に垂直にして置いてください\n② 画面に表示されている映像を確認しながら全身が映るように調整しましょう\n③ 全身が映ると自動的にゲームがスタートします</string>
    <string name="rule2Game">2. ゲーム</string>
    <string name="rule2GameSum">① 右側にお題が表示されるので、（選手になったつもりで）マネをしましょう\n② ゲームのAIが「これは似ているな」と判断したらクリアとなり、次のお題が表示されます\n③ お題は全5問で、すべてクリアするまでに要した時間をスコアとします</string>
    <string name="rule3Result">3. リザルト</string>
    <string name="rule3ResultSum">① ゲームが終わるとリザルト画面が表示されます\n② 右側に今回のスコアと順位、左側に今までプレイしたゲームのスコアがランキング形式で表示されます\n ③ 「名前を変更」を押すと、今回ゲームをプレイした人の名前をつけられます</string>
    <string name="ruleSideNote">ちなみに、このゲームは東京オリンピック開会式で披露された「ピクトグラムパフォーマンス」にインスパイアされて作成されたものです。このゲームを使えば、誰でもあのパフォーマンスのようにピクトグラムになりきれます。</string>
    <string name="seePictogramPerformance">ピクトグラムパフォーマンスを見る</string>
    <string name="judgeAccuracy">判定精度</string>
    <string name="judgeAccuracySum">「ピクトグラムと似ている」と判定する精度のしきい値を設定します。精度が高いほど、忠実にピクトグラムを再現しなければいけないため、ゲーム難易度が上がります。</string>

</resources>