<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">

        <Preference
            android:key="ProcessingMethod"
            android:title="@string/processingMethod"
            android:summary="@string/processingMethodSum" />

        <Preference
            android:key="MLModel"
            android:title="@string/estimatedAccuracy"
            android:summary="@string/estimatedAccuracySum" />

        <SwitchPreference
            android:key="PreviewCamera"
            android:title="@string/previewCamera"
            android:summary="@string/previewCameraSum"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/debug">

        <SwitchPreference
            android:key="DebugMode"
            android:title="@string/debugMode"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/overview">

        <Preference
            android:key="OpenSourceLicense"
            android:title="@string/openSourceLicense" />

        <Preference
            android:key="Version"
            android:title="@string/version" />

    </PreferenceCategory>
</PreferenceScreen>