<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/explainGame"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center" />

        <TextView
            android:id="@+id/ruleSummaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ruleSummary"
            android:textColor="@color/colorPrimaryText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rule1Prepare"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule1PrepareSum"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rule2Game"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule2GameSum"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/rule3Result"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule3ResultSum"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ruleSideNote" />
    </LinearLayout>

</ScrollView>