<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/error"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/summaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/criticalErrorSum"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/debugInformationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/debugInformation"
            android:textColor="@color/colorSecondaryText"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/stackTraceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="13sp"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>
</ScrollView>