<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <View
        android:id="@+id/backgroundView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pictogramMainImage"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:translationZ="8dp"
        android:background="@drawable/shape_circle_background"
        android:padding="16dp"
        android:src="@drawable/vec_table_tennis"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/backgroundView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pictogramSubImage"
        android:layout_width="96dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="64dp"
        android:translationZ="8dp"
        android:background="@drawable/shape_circle_background"
        android:padding="16dp"
        android:src="@drawable/vec_rhythmic_gymnastics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/vec_setting"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryText"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/summaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/summaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/gameSummary"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:breakStrategy="balanced"
        app:layout_constraintEnd_toEndOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintBottom_toTopOf="@id/startButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/startGame"
        android:textColor="@color/colorNightPrimaryText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/summaryText"
        app:layout_constraintStart_toStartOf="@+id/summaryText"
        app:layout_constraintTop_toBottomOf="@+id/summaryText"
        app:layout_constraintBottom_toTopOf="@id/ruleButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ruleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/explainRule"
        android:textColor="@color/colorNightPrimaryText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/summaryText"
        app:layout_constraintStart_toStartOf="@+id/summaryText"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

</androidx.constraintlayout.widget.ConstraintLayout>