<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/medalImage"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:scaleType="center"
        android:src="@drawable/vec_medal_gold"
        android:adjustViewBounds="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rankingLayout"
        android:layout_width="88dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <TextView
            android:id="@+id/ranking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:text="8"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="80sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rank"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="bottom|start"
            android:text="@string/rank"
            android:textColor="@color/colorPrimaryText"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/challengerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="Unknown Challenger"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/medalImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2021/04/12 12:34"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/challengerName"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/eventImage1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/vec_athletics"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintDimensionRatio="w:1:1"
        app:layout_constraintStart_toStartOf="@+id/challengerName"
        app:layout_constraintEnd_toStartOf="@id/eventImage2"
        app:layout_constraintTop_toBottomOf="@+id/challengerName" />

    <ImageView
        android:id="@+id/eventImage2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/vec_football"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintDimensionRatio="w:1:1"
        app:layout_constraintStart_toEndOf="@+id/eventImage1"
        app:layout_constraintEnd_toStartOf="@+id/eventImage3"
        app:layout_constraintTop_toBottomOf="@+id/challengerName"/>

    <ImageView
        android:id="@+id/eventImage3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/vec_rhythmic_gymnastics"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintDimensionRatio="w:1:1"
        app:layout_constraintStart_toEndOf="@+id/eventImage2"
        app:layout_constraintEnd_toStartOf="@+id/eventImage4"
        app:layout_constraintTop_toBottomOf="@+id/challengerName"/>

    <ImageView
        android:id="@+id/eventImage4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/vec_badminton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintDimensionRatio="w:1:1"
        app:layout_constraintStart_toEndOf="@+id/eventImage3"
        app:layout_constraintEnd_toStartOf="@+id/eventImage5"
        app:layout_constraintTop_toBottomOf="@+id/challengerName"/>

    <ImageView
        android:id="@+id/eventImage5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/vec_beach_volleyball"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintDimensionRatio="w:1:1"
        app:layout_constraintStart_toEndOf="@id/eventImage4"
        app:layout_constraintEnd_toStartOf="@id/totalTimeLayout"
        app:layout_constraintTop_toBottomOf="@+id/challengerName" />

    <TextView
        android:id="@+id/eventTime1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="16s"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/eventImage1"
        app:layout_constraintStart_toStartOf="@id/eventImage1"
        app:layout_constraintTop_toBottomOf="@id/eventImage1" />

    <TextView
        android:id="@+id/eventTime2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="16s"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/eventImage2"
        app:layout_constraintStart_toStartOf="@id/eventImage2"
        app:layout_constraintTop_toBottomOf="@id/eventImage2" />

    <TextView
        android:id="@+id/eventTime3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="16s"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/eventImage3"
        app:layout_constraintStart_toStartOf="@id/eventImage3"
        app:layout_constraintTop_toBottomOf="@id/eventImage3" />

    <TextView
        android:id="@+id/eventTime4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="16s"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/eventImage4"
        app:layout_constraintStart_toStartOf="@id/eventImage4"
        app:layout_constraintTop_toBottomOf="@id/eventImage4" />

    <TextView
        android:id="@+id/eventTime5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="16s"
        android:textColor="@color/colorSecondaryText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/eventImage5"
        app:layout_constraintStart_toStartOf="@id/eventImage5"
        app:layout_constraintTop_toBottomOf="@id/eventImage5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/totalTimeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/eventTime5"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/challengerName">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/totalTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/totalTime"
            android:textColor="@color/colorPrimaryText"
            android:textSize="10sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|end"
            android:text="12.58"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold|italic"
            app:autoSizeMaxTextSize="80sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/second"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalTimeText" />

        <TextView
            android:id="@+id/second"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="bottom|start"
            android:text="@string/second"
            android:textColor="@color/colorPrimaryText"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/totalTimeText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>